--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,65 +1,75 @@
-<div class="jumbotron">
-  <div class"container">
+<div class="container main-container">
+  <div class="jumbotron" style="background-color: #ffffff;">
+    <img src='/assets/img/Burger.jpg' class="text-center" style="width: 300px">
     <br><br>
-  <h2 class="text-center">Current Burgers</h2>
-  
-  <ul style="list-style-type:none">
-    {{#each burgers}}
-      {{#unless this.devoured}}
-        <li>
-          <p>
-            {{this.burger_name}}
-          </p>
-          <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
-            <input type="hidden" name="devoured" value="true" class="form-control">
-            <button type="submit" class="btn btn-outline-danger text-center">Eat ME!</button>
-          </form>
-          <hr>
-        </li>
-      {{/unless}}
-    {{/each}}
-  </ul>
- 
-</div>
- <div class="container">
-      <br><br>
-      <h2 class="text-center">Eaten Burgers</h2>
-      <ul style="list-style-type:none">
-        {{#each burgers}}
-          {{#if this.devoured}}
-            <li>
-              <p>
-                {{this.burger_name}}
-              </p>
-           
-            <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
-             <input type="hidden" name="devoured" value="false">
-             <button type="submit" class="btn btn-outline-danger">Bye Now!</button>
-             </form>
-          <hr>
-          </li>
-          {{/if}}
-        {{/each}}
-      </ul>
-    </div>
+    <h1> Eat Da Burger! </h1>
+  </div>
 
-</div>
-<div class="row">
-    <div class="container">
+  <div class="jumbotron" style="background-color: #ffffff;">
+    <div class="row">
+
+      <div class="col-md-6" style="margin-bottom: 20px">
+        <h2 class="text-center">Burger's to Eat</h2>
+        <div class="panel-panel default">
+          <br><br>
+          <ul class="list-group">
+            {{#each burgers}}
+              {{#unless this.devoured}}
+                <li class = "list-group-item">
+                <p class="lead">{{this.burger_name}}</p>
+                  <span class="input-group-btn">
+                    <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
+                      <input type="hidden" name="devoured" value="true" class="form-control">
+                      <button type="submit" class="btn btn-outline-danger">Eat ME!</button>
+                    </form>
+                  </span>
+                </li>
+              {{/unless}}
+            {{/each}}
+          </ul>
+        </div>
+      </div> {{!--burger's to eat!--}}
+
+      <div class="col-md-6">
+        <h2 class="text-center">Eaten Burgers</h2>
+          <div class="panel-panel default">
+            <br><br>
+          <ul class="list-group">
+            {{#each burgers}}
+              {{#if this.devoured}}
+                <li class="list-group-item">
+                  <p class="lead">{{this.burger_name}}</p>
+                  {{!-- <span class="input-group-btn">
+                    {{!-- <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
+                      <input type="hidden" name="devoured" value="false">
+                      <button type="submit" class="btn btn-outline-danger">Bye Now!</button>
+                    </form>
+                  </span> --}}
+                </li>
+              {{/if}}
+            {{/each}}
+          </ul>
+        </div>
+      </div>
+
+  </div>
+  <br><br>
+  <div class="container">
+    <div class="col-md-12">
+      {{!-- <h2 class="text-center">Add a Burger you want to eat</h2> --}}
       <br>
         <form class="create-update-form" action="burgers/create" method="POST">
-          <h2 class="text-center">Add a Burger</h2>
-          <div class="form-group row">
-            <label for="newBurger"><p>Burger Name:</p></label>
-              <div class="col-sm-10">
+            {{!-- <label for="newBurger"></label> --}}
+              {{!-- <div class="col-sm-10"> --}}
                 <input type="hidden" name="devoured" value="0" class="form-control">
-                </div>
-            <input type="text" id="newBurger" name="burger_name">
-          <button type="submit" class="btn btn-outline-success"
-          >Add Burger</button>
+              {{!-- </div> --}}
+            <input name="burger_name" type="text" class="form-control" placeholder="Add a Burger you want to eat" id="inputDefault">
+            <button type="submit" class="btn btn-outline-success"
+          >Submit</button>
         </form>
-      </div>
+    
     </div>
-
-   
+    </div>
+  </div>
+</div>
 
